# crossThreadCommunication

./: Block.hpp  CMakeCache.txt  CMakeLists.txt  CustomMath.cpp  CustomMath.hpp  DataMessage.hpp  Makefile  MsgEmitter.cpp  MsgEmitter.hpp  MsgReceiver.hpp  PositionMsg.hpp  README.md  Reference.cpp  ReferenceMessage.cpp  ReferenceMessage.hpp  RestrictedNormRefSettingsMsg.cpp  RestrictedNormWaypointRefGenerator.cpp  RestrictedNormWaypointRefGenerator.hpp  TimedBlock.cpp  TimedBlock.hpp  Vector3D.hpp  Waypoint.hpp  WaypointMsg.cpp  boost_multithread.code-workspace  cmake_install.cmake  common_types.hpp  main.cpp  multi_thread_app  thread_initial_unit.cpp  thread_initial_unit.hpp  thread_terminal_unit.cpp  thread_terminal_unit.hpp
